--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 a {
   font-weight: 500;
@@ -23,7 +27,7 @@ h1 {
 }
 
 
-/* @media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -34,4 +38,4 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
-} */
+}
